# field_area_segmentation

./: README.md  eda.ipynb  pyproject.toml
