[tool.poetry]
name = "field-area-segmentation"
version = "0.1.0"
description = ""
authors = ["Ryo Watanabe <ryopoaro03290024@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.4.0"
ipykernel = "^6.29.5"
matplotlib = "^3.9.1"
path = "^17.0.0"
tifffile = "^2024.7.24"
numpy = "^2.0.1"
imagecodecs = "^2024.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
